--- a/01-Drum-Kit/styles.css
+++ b/01-Drum-Kit/styles.css
@@ -17,5 +17,46 @@ body {
 .container {
   width: 100%;
   min-height: 100dvh;
+  padding: 0.75em;
+  background: url(./assets/drum-kit.avif) center/cover;
+  display: grid;
+  place-content: center;
+}
+
+.buttons {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: clamp(1.5rem, 4vw, 2rem);
+}
+
+button,
+span {
+  text-transform: uppercase;
+}
+
+.--btn {
+  width: clamp(90px, 10vw, 110px);
   padding: 1em;
+  font-size: clamp(1.8rem, 5vw, 2.2rem);
+  font-weight: bold;
+  background: #f3f3f3;
+  filter: drop-shadow(3px 3px rgb(247, 0, 255)) sepia(30%)
+    drop-shadow(-3px -3px rgb(0, 255, 115));
+  border: none;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.playing {
+  transform: scale(1.1);
+}
+
+span {
+  display: block;
+  font-size: clamp(1rem, 1.1vw, 1.5rem);
+  font-weight: normal;
+  letter-spacing: 1px;
+  margin-top: 0.25em;
 }
